# CoinWallet

./: .env.example  .env.production.desktop.example  .gitignore  Dockerfile.admin  Dockerfile.api  PLAN.md  PROGRESS.md  README.md  docker-compose.yml  package.json  requirements.txt  setup.bat  setup.py  setup.sh  start_admin.bat  start_admin.ps1  stop_admin.ps1
.cursor/: COINWALLET_MASTER_PLAN.md  LOOP_STATE.json
admin/: package-lock.json  package.json  svelte.config.js  vite.config.ts
api/: __init__.py  admin.py  auth.py  cloud_app.py  desktop_ui.py  events.py  leaderboard.py  main.py  middleware.py  network.py  rate_limit.py  remote_leaderboard.py  remote_services.py  security.py  swap.py  wallet.py
cloud/: package-lock.json  package.json  schema.sql  wrangler.toml
deploy/: Caddyfile
docs/: TESTNET_CHECKLIST.md  YOU_MUST_DO.md
releases/: releases.json  signing-keys.example.json
scripts/: backup_db.ps1  backup_db.sh  build-admin-desktop.mjs  build-api-sidecar.ps1  build-mac.sh  build-windows.ps1  coinwallet-api.spec  coinwallet_api_launcher.py  debug_login.py  deploy-site.ps1  deploy-site.sh  ensure-cloudflare-pages-project.mjs  ensure-cloudflare-pages-project.ps1  finalize-release.ps1  finalize-release.sh  generate_icons.py  hash_password.py  kill_port.py  operator-release-checklist.ps1  patch-tauri-tor-resources.mjs  publish-github-release.ps1  seed_admin.py  (+25 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/tor/: README.md
src-tauri/src/: lib.rs  main.rs  tor_sidecar.rs
(+120 files in other folders)
