[package]
name = "coinwallet"
version = "0.1.0"
description = "CoinWallet — non-custodial Bitcoin desktop wallet"
authors = ["CoinWallet"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "coinwallet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
url = "2"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
